# pywc

./: .flake8  README.md  \  pyproject.toml
docs/source/: conf.py  index.rst
pywc/: cli.py
tests/: test_pywc.py
