[project]
name = "pywc"
version = "0.8"
description = "Python version of wc command line tool"
readme = "README.md"
authors = [{name = "Jimmy Lindsey"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "click~=8.1.7",
    "sphinx~=8.1.3",
    "sphinx-click~=6.0.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/Akatama/pywc"
Changelog = "https://github.com/Akatama/pywc/releases"
Issues = "https://github.com/Akatama/pywc/issues"
CI = "https://github.com/Akatama/pywc/actions"

[project.scripts]
pywc = "pywc.cli:cli"

[tool.black]
enable = true
line-length=119

[project.optional-dependencies]
test = [
    "pytest~=8.3.3",
    "pytest-mock~=3.14.0",
    #"flake8~=7.1.1",
    #"black~=24.10.0",
    #"python-lsp-server~=1.12.0",
    #"python-lsp-black~=2.0.0",
    #"pylsp-mypy~=0.6.9"
]
